ubuntu18-couchdb/k8s/example simple deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: couchdb
  name: couchdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchdb
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
      - image: mercisi/ubuntu18:couchdb
        imagePullPolicy: IfNotPresent
        name: couchdb
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
          - containerPort: 5984
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
