ubuntu18-couchdb/k8s/example simple deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: couchdb
  name: couchdb
spec:
  ports:
  - port: 5984
    protocol: TCP
    targetPort: 5984
  selector:
    app: couchdb
  type: NodePort
