ubuntu18-couchdb/k8s/example simple deployment/ingress.yaml
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: test-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /coudhdb
#         pathType: Prefix
#         backend:
#           serviceName: coudhdb
#           servicePort: 5984


apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: coudhdb-ingress
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  backend:
    serviceName: couchdb
    servicePort: 5984



# apiVersion: v1
# kind: Service
# metadata:
#   name: coudhdb-ingress
#   annotations:
#     traefik.backend.circuitbreaker: "NetworkErrorRatio() > 0.5"
# spec:
#   ports:
#   - name: http
#     targetPort: 5984
#     port: 5984
#   selector:
#     app: couchdb
